styles: fix gap

--- a/app/components/HomePageLinks/HomePageLinks.module.css
+++ b/app/components/HomePageLinks/HomePageLinks.module.css
@@ -2,7 +2,7 @@
 .HomePageLinks {
   display: grid;
   grid-template-rows: repeat(4, 1fr);
-  gap: 16px;
+  gap: 8px;
   column-gap: 32px;
   grid-auto-flow: column;
 }
